# fastapi-docker-postgres

./: Dockerfile  README.md  README.mdgit  docker-compose.yml
services/inventory_service/: Dockerfile  flyway.conf  pyproject.toml
services/inventory_service/src/: database.py  kafka_service.py  main.py  migration_utils.py  routes.py
services/order_service/: Dockerfile  flyway.conf  pyproject.toml
services/order_service/src/: db_service.py  kafka_service.py  routes.py
